tests/baselines/reference/argumentExpressionContextualTyping.errors.txt
tests/cases/conformance/expressions/contextualTyping/argumentExpressionContextualTyping.ts(16,5): error TS2345: Argument of type '(文字 | 数字 | 真假)[]' is not assignable to parameter of type '[文字, 数字, 真假]'.
  Property '0' is missing in type '(文字 | 数字 | 真假)[]'.
tests/cases/conformance/expressions/contextualTyping/argumentExpressionContextualTyping.ts(17,5): error TS2345: Argument of type '(文字 | 数字 | 真假)[]' is not assignable to parameter of type '[文字, 数字, 真假]'.
tests/cases/conformance/expressions/contextualTyping/argumentExpressionContextualTyping.ts(18,5): error TS2345: Argument of type '{ x: (文字 | 数字)[]; y: { c: 真假; d: 文字; e: 数字; }; }' is not assignable to parameter of type '{ x: [任意, 任意]; y: { c: 任意; d: 任意; e: 任意; }; }'.
  Types of property 'x' are incompatible.
    Type '(文字 | 数字)[]' is not assignable to type '[任意, 任意]'.
      Property '0' is missing in type '(文字 | 数字)[]'.


==== tests/cases/conformance/expressions/contextualTyping/argumentExpressionContextualTyping.ts (3 errors) ====
    // In a typed function call, argument expressions are contextually typed by their corresponding parameter types.
    function foo({x: [a, b], y: {c, d, e}}) { }
    function bar({x: [a, b = 10], y: {c, d, e = { f:1 }}}) { }
    function baz(x: [string, number, boolean]) { }
    
    var o = { x: ["string", 1], y: { c: true, d: "world", e: 3 } };
    var o1: { x: [string, number], y: { c: boolean, d: string, e: number } } = { x: ["string", 1], y: { c: true, d: "world", e: 3 } };
    foo(o1); // Not error since x has contextual type of tuple namely [string, number]
    foo({ x: ["string", 1], y: { c: true, d: "world", e: 3 } }); // Not error
    
    var array = ["string", 1, true];
    var tuple: [string, number, boolean] = ["string", 1, true];
    baz(tuple);
    baz(["string", 1, true]);
    
    baz(array);                          // Error
        ~~~~~
!!! error TS2345: Argument of type '(文字 | 数字 | 真假)[]' is not assignable to parameter of type '[文字, 数字, 真假]'.
!!! error TS2345:   Property '0' is missing in type '(文字 | 数字 | 真假)[]'.
    baz(["string", 1, true, ...array]);  // Error
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(文字 | 数字 | 真假)[]' is not assignable to parameter of type '[文字, 数字, 真假]'.
    foo(o);                              // Error because x has an array type namely (string|number)[]
        ~
!!! error TS2345: Argument of type '{ x: (文字 | 数字)[]; y: { c: 真假; d: 文字; e: 数字; }; }' is not assignable to parameter of type '{ x: [任意, 任意]; y: { c: 任意; d: 任意; e: 任意; }; }'.
!!! error TS2345:   Types of property 'x' are incompatible.
!!! error TS2345:     Type '(文字 | 数字)[]' is not assignable to type '[任意, 任意]'.
!!! error TS2345:       Property '0' is missing in type '(文字 | 数字)[]'.